syntax.output
State 49 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | error RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC
   25       | error RC

   26 StmtList: Stmt StmtList
   27         | %empty

   28 Stmt: Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | WHILE LP Exp RP Stmt
   34     | error SEMI
   35     | error

   36 DefList: Def DefList
   37        | %empty

   38 Def: Specifier DecList SEMI

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGNOP Exp

   43 Exp: ID
   44    | INT
   45    | FLOAT
   46    | Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp LE Exp
   50    | Exp GE Exp
   51    | Exp GEQ Exp
   52    | Exp LEQ Exp
   53    | Exp EQ Exp
   54    | Exp NEQ Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 18 25 34 35
ID (258) 13 15 16 19 20 43 62 63 65
INT (259) 17 44
FLOAT (260) 45
SEMI (261) 4 5 28 30 34 38
COMMA (262) 8 21 40 66
ASSIGNOP (263) 42 46
LE (264) 49
GE (265) 50
LEQ (266) 52
GEQ (267) 51
EQ (268) 53
NEQ (269) 54
PLUS (270) 55
MINUS (271) 56 60
STAR (272) 57
DIV (273) 58
AND (274) 47
OR (275) 48
DOT (276) 65
NOT (277) 61
TYPE (278) 9
LP (279) 19 20 31 32 33 59 62 63
RP (280) 19 20 31 32 33 59 62 63
LB (281) 17 64
RB (282) 17 18 64
LC (283) 11 24
RC (284) 11 24 25
STRUCT (285) 11 12
RETURN (286) 30
IF (287) 31 32
ELSE (288) 32
WHILE (289) 33
UMINUS (290)
LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Program (38)
    on left: 1, on right: 0
ExtDefList (39)
    on left: 2 3, on right: 1 2
ExtDef (40)
    on left: 4 5 6, on right: 2
ExtDecList (41)
    on left: 7 8, on right: 4 8
Specifier (42)
    on left: 9 10, on right: 4 5 6 23 38
StructSpecifier (43)
    on left: 11 12, on right: 10
OptTag (44)
    on left: 13 14, on right: 11
Tag (45)
    on left: 15, on right: 12
VarDec (46)
    on left: 16 17 18, on right: 7 8 17 23 41 42
FunDec (47)
    on left: 19 20, on right: 6
VarList (48)
    on left: 21 22, on right: 19 21
ParamDec (49)
    on left: 23, on right: 21 22
CompSt (50)
    on left: 24 25, on right: 6 29
StmtList (51)
    on left: 26 27, on right: 24 26
Stmt (52)
    on left: 28 29 30 31 32 33 34 35, on right: 26 31 32 33
DefList (53)
    on left: 36 37, on right: 11 24 36
Def (54)
    on left: 38, on right: 36
DecList (55)
    on left: 39 40, on right: 38 40
Dec (56)
    on left: 41 42, on right: 39 40
Exp (57)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65, on right: 28 30 31 32 33 42 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 64 65 66 67
Args (58)
    on left: 66 67, on right: 62 66


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   18 VarDec: error . RB

    RB  shift, and go to state 20


State 14

   16 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 16 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 7 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 25
    LC     shift, and go to state 26

    CompSt  go to state 27


State 19

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

   18 VarDec: error RB .

    $default  reduce using rule 18 (VarDec)


State 21

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    8 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 13
    ID     shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 24

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 37


State 25

   25 CompSt: error . RC

    RC  shift, and go to state 38


State 26

   24 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 30


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   38 Def: Specifier . DecList SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 29

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 43


State 30

   36 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 44
    Def              go to state 30


State 31

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 32

   23 ParamDec: Specifier . VarDec

    error  shift, and go to state 13
    ID     shift, and go to state 35

    VarDec  go to state 45


State 33

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 46


State 34

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 47

    $default  reduce using rule 22 (VarList)


State 35

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 36

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 37

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 48


State 38

   25 CompSt: error RC .

    $default  reduce using rule 25 (CompSt)


State 39

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 49
    ID      shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 26
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 60
    Stmt      go to state 61
    Exp       go to state 62


State 40

   17 VarDec: VarDec . LB INT RB
   41 Dec: VarDec .
   42    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 63
    LB        shift, and go to state 24

    $default  reduce using rule 41 (Dec)


State 41

   38 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 64


State 42

   39 DecList: Dec .
   40        | Dec . COMMA DecList

    COMMA  shift, and go to state 65

    $default  reduce using rule 39 (DecList)


State 43

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 44

   36 DefList: Def DefList .

    $default  reduce using rule 36 (DefList)


State 45

   17 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 46

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 47

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 66
    ParamDec         go to state 34


State 48

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 49

   25 CompSt: error . RC
   34 Stmt: error . SEMI
   35     | error .

    SEMI  shift, and go to state 67
    RC    shift, and go to state 38

    RC        [reduce using rule 35 (Stmt)]
    $default  reduce using rule 35 (Stmt)


State 50

   43 Exp: ID .
   62    | ID . LP Args RP
   63    | ID . LP RP

    LP  shift, and go to state 68

    $default  reduce using rule 43 (Exp)


State 51

   44 Exp: INT .

    $default  reduce using rule 44 (Exp)


State 52

   45 Exp: FLOAT .

    $default  reduce using rule 45 (Exp)


State 53

   60 Exp: MINUS . Exp

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 69


State 54

   61 Exp: NOT . Exp

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 70


State 55

   59 Exp: LP . Exp RP

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 71


State 56

   30 Stmt: RETURN . Exp SEMI

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 72


State 57

   31 Stmt: IF . LP Exp RP Stmt
   32     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 73


State 58

   33 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 74


State 59

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


State 60

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 75


State 61

   26 StmtList: Stmt . StmtList

    error   shift, and go to state 49
    ID      shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 26
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 76
    Stmt      go to state 61
    Exp       go to state 62


State 62

   28 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LE Exp
   50    | Exp . GE Exp
   51    | Exp . GEQ Exp
   52    | Exp . LEQ Exp
   53    | Exp . EQ Exp
   54    | Exp . NEQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    SEMI      shift, and go to state 77
    ASSIGNOP  shift, and go to state 78
    LE        shift, and go to state 79
    GE        shift, and go to state 80
    LEQ       shift, and go to state 81
    GEQ       shift, and go to state 82
    EQ        shift, and go to state 83
    NEQ       shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 63

   42 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 93


State 64

   38 Def: Specifier DecList SEMI .

    $default  reduce using rule 38 (Def)


State 65

   40 DecList: Dec COMMA . DecList

    error  shift, and go to state 13
    ID     shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 94
    Dec      go to state 42


State 66

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 67

   34 Stmt: error SEMI .

    $default  reduce using rule 34 (Stmt)


State 68

   62 Exp: ID LP . Args RP
   63    | ID LP . RP

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    RP     shift, and go to state 95

    Exp   go to state 96
    Args  go to state 97


State 69

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LE Exp
   50    | Exp . GE Exp
   51    | Exp . GEQ Exp
   52    | Exp . LEQ Exp
   53    | Exp . EQ Exp
   54    | Exp . NEQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 60 (Exp)


State 70

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LE Exp
   50    | Exp . GE Exp
   51    | Exp . GEQ Exp
   52    | Exp . LEQ Exp
   53    | Exp . EQ Exp
   54    | Exp . NEQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 61 (Exp)


State 71

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LE Exp
   50    | Exp . GE Exp
   51    | Exp . GEQ Exp
   52    | Exp . LEQ Exp
   53    | Exp . EQ Exp
   54    | Exp . NEQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 78
    LE        shift, and go to state 79
    GE        shift, and go to state 80
    LEQ       shift, and go to state 81
    GEQ       shift, and go to state 82
    EQ        shift, and go to state 83
    NEQ       shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    RP        shift, and go to state 98
    LB        shift, and go to state 92


State 72

   30 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LE Exp
   50    | Exp . GE Exp
   51    | Exp . GEQ Exp
   52    | Exp . LEQ Exp
   53    | Exp . EQ Exp
   54    | Exp . NEQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 78
    LE        shift, and go to state 79
    GE        shift, and go to state 80
    LEQ       shift, and go to state 81
    GEQ       shift, and go to state 82
    EQ        shift, and go to state 83
    NEQ       shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 73

   31 Stmt: IF LP . Exp RP Stmt
   32     | IF LP . Exp RP Stmt ELSE Stmt

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 100


State 74

   33 Stmt: WHILE LP . Exp RP Stmt

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 101


State 75

   24 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 24 (CompSt)


State 76

   26 StmtList: Stmt StmtList .

    $default  reduce using rule 26 (StmtList)


State 77

   28 Stmt: Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 78

   46 Exp: Exp ASSIGNOP . Exp

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 102


State 79

   49 Exp: Exp LE . Exp

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 103


State 80

   50 Exp: Exp GE . Exp

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 104


State 81

   52 Exp: Exp LEQ . Exp

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 105


State 82

   51 Exp: Exp GEQ . Exp

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 106


State 83

   53 Exp: Exp EQ . Exp

    ID     shift, and go to state 50
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 107


State 84

   54 Exp: Exp NEQ . Exp
